Update solar site

--- a/assemble/unity_pipeline/index.html
+++ b/assemble/unity_pipeline/index.html
@@ -1075,7 +1075,7 @@ XPCF_DEFINE_COMPONENT_TRAITS(SolAR::PIPELINES::MyPipeline, <i class="conum" data
 </tr>
 <tr>
 <td><i class="conum" data-value="8"></i><b>8</b></td>
-<td>[white]#Declare a xpcf task and the function running the pipeline loop in a dedicated thread.</td>
+<td><span class="white">Declare a xpcf task and the function running the pipeline loop in a dedicated thread.</span></td>
 </tr>
 <tr>
 <td><i class="conum" data-value="9"></i><b>9</b></td>
