--- a/index.html
+++ b/index.html
@@ -548,7 +548,14 @@ window.cookieconsent.initialise({
   </article>
   <article class="col-md-5 whatsnew">
     <h2>What's new in SolAR framework?</h2>
-    <p>v0.8.0 just released! (2020/10/05) </p>
+    <p>v0.9.0 just released! (2021/01/07) </p>
+      <div class="container">
+        <ul>
+          <li> Map overlap detection and merging </li>
+          <li> Move to XPCF 2.5.0 to use remoting feature for creating communication layer of cloud services </li>
+        </ul>
+      </div>
+    <p>v0.8.0 (2020/10/05) </p>
       <div class="container">
         <ul>
           <li> Android is now supported </li>
@@ -582,7 +589,7 @@ window.cookieconsent.initialise({
     </div>
   </article>
 </section>
-<section class="row"> 
+<section class="row">
   <article class="col-md-12">
     <h2>Who need SolAR?</h2>  
     <p>According to your needs, SolAR framework offers several user profiles:</p>
@@ -613,7 +620,7 @@ window.cookieconsent.initialise({
         <section>
           <span class="ar_assembler">
               <div><i class="fas fa-user fa-4x yellow"></i></div>
-              <i class="fas fa-project-diagram fa-2x"></i> 
+              <i class="fas fa-project-diagram fa-2x"></i>
           </span>
         </section>
       </div>
@@ -631,7 +638,7 @@ window.cookieconsent.initialise({
       <section>
         <span class="ar_creator">
           <div><i class="fas fa-user fa-4x blue"></i></div>
-          <i class="fas fa-tools fa-2x"></i> 
+          <i class="fas fa-tools fa-2x"></i>
         </span>
       </section>
     </div>
@@ -644,7 +651,7 @@ window.cookieconsent.initialise({
     </a>
   </article>
 </section>
-<section class="row"> 
+<section class="row">
   <article class="col-md-12">
     <h2>How to contribute to SolAR?</h2>
     <p>Join the community, find out how you can contribute to the framework according to your profile and skills and participate to the augmented reality adoption. </p>
