Update solar site

--- a/install/linux/index.html
+++ b/install/linux/index.html
@@ -526,6 +526,7 @@ window.cookieconsent.initialise({
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
 <li><a href="#install_on_linux">Install On Linux</a></li>
+<li><a href="#supported_distribution">Supported distribution</a></li>
 <li><a href="#test_solar">Test SolAR</a></li>
 <li><a href="#InstalDevEnv">Install development environment</a>
 <ul class="sectlevel2">
@@ -550,6 +551,14 @@ window.cookieconsent.initialise({
 <h2 id="install_on_linux"><a class="anchor" href="#install_on_linux"></a><a class="link" href="#install_on_linux">Install On Linux</a></h2>
 <div class="sectionbody">
 
+</div>
+</div>
+<div class="sect1">
+<h2 id="supported_distribution"><a class="anchor" href="#supported_distribution"></a><a class="link" href="#supported_distribution">Supported distribution</a></h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Currently, only <strong>Ubuntu 18.04</strong> distribution has been tested, and is highly recommended. We plan to support Ubuntu 20.04 very soon.</p>
+</div>
 </div>
 </div>
 <div class="sect1">
