Update solar site

--- a/install/windows/index.html
+++ b/install/windows/index.html
@@ -645,18 +645,58 @@ As you will see later, the SolAR framework is based on <em>QMake</em> originally
 <div class="paragraph">
 <p>Create a <em>Qt</em> account if not already done, select where you want to install <em>Qt</em>. You don&#8217;t need to install <em>Qt</em> SDK, just the <em>Qt Creator</em>. So just check the following components (if not available during installation, search for <code>QT maintenance tool</code> or <code>QT uninstall</code> after installation to launch the QT tools to upgrade it):</p>
 </div>
-<div class="paragraph">
-<p><strong>Preview
-<strong> QT creator 4.14.0-rc1
-</strong> QT Creator 4.14.0-rc1 CDB Debugger Support
-* Qt
-<strong> Qt 5.14.2 (last version proposed)
-</strong></strong> with MSVC 2017 64-bit
-<strong>* Android (if you want to build SolAR for Android)
-</strong> Developer and Designer Tools
-<strong>* Qt Creator 4.14.0 CDB Debugger Support
-</strong>* Debugging Tools for Windows
-<strong>*</strong> CMake 3.19.2 64-bit</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Preview</p>
+<div class="ulist">
+<ul>
+<li>
+<p>QT creator 4.14.0-rc1</p>
+</li>
+<li>
+<p>QT Creator 4.14.0-rc1 CDB Debugger Support</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>Qt</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Qt 5.14.2 (last version proposed)</p>
+<div class="ulist">
+<ul>
+<li>
+<p>with MSVC 2017 64-bit</p>
+</li>
+<li>
+<p>Android (if you want to build SolAR for Android)</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>Developer and Designer Tools</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Qt Creator 4.14.0 CDB Debugger Support</p>
+</li>
+<li>
+<p>Debugging Tools for Windows</p>
+</li>
+<li>
+<p>CMake 3.19.2 64-bit</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</li>
+</ul>
 </div>
 <div class="paragraph">
 <p>and start the installation.</p>
