--- a/install/windows/index.html
+++ b/install/windows/index.html
@@ -718,7 +718,7 @@ As you will see later, the SolAR framework is based on <em>QMake</em> originally
 <div class="ulist">
 <ul>
 <li>
-<p>Start by downloading and installing <em>Remaken</em> available on the following link: <a href="https://github.com/b-com-software-basis/remaken/releases/download/1.7.1/Setup_Remaken_1.7.1.exe">Remaken installer version 1.7.1</a></p>
+<p>Start by downloading and installing <em>Remaken</em> available on the following link: <a href="https://github.com/b-com-software-basis/remaken/releases/download/1.7.2/Setup_Remaken_1.7.2.exe">Remaken installer version 1.7.2</a></p>
 </li>
 <li>
 <p>Launch the remaken installer <strong>with administrator rights</strong>. By default, the dependencies will be installed in your <code>C:/Users/%Username%</code> directory, but you can change it by setting another location for your <em>REMAKEN_PKG_ROOT</em> environement variable. By default, Remaken will install Conan, pkg_config and CMake which will be used afterwards. It will also add conan-community and bincrafters conan remotes. Conan will check these remotes for searching your dependencies.+</p>
@@ -742,7 +742,7 @@ As you will see later, the SolAR framework is based on <em>QMake</em> originally
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>remaken init --tag latest</pre>
+<pre>remaken init -f -e</pre>
 </div>
 </div>
 <div class="paragraph">
