Update solar site

--- a/install/android/index.html
+++ b/install/android/index.html
@@ -553,7 +553,7 @@ window.cookieconsent.initialise({
 <h2 id="test_solar"><a class="anchor" href="#test_solar"></a><a class="link" href="#test_solar">Test SolAR</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>We provide you a bundle to test our samples code. It is .zip file including SolAR&#8217;s .apk and markers if required.</p>
+<p>We provide you with an Android demo app to showcase 3 pipelines: fiducial and natural image marker-based pipelines and a SLAM.</p>
 </div>
 <table class="tableblock frame-all grid-all spread">
 <caption class="title">Table 1. Available Samples</caption>
@@ -564,7 +564,7 @@ window.cookieconsent.initialise({
 <tbody>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">SolAR Demo (Fiducial, Natural, SLAM)</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARUnitySamples/releases/tag/APK%2F0.8.0%2Fandroid">v0.8.0 download link</a> (V0.9.0 coming soon)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARUnityPlugin/releases/tag/0.9.0">v0.9.0 download link</a></p></td>
 </tr>
 </tbody>
 </table>
@@ -575,7 +575,7 @@ window.cookieconsent.initialise({
 <i class="fa icon-important" title="Important"></i>
 </td>
 <td class="content">
-Print the marker included in .zip file to use it during the test.
+You will find the required markers for you to print on the link above.
 </td>
 </tr>
 </table>
