Update solar site

--- a/index.html
+++ b/index.html
@@ -548,7 +548,13 @@ window.cookieconsent.initialise({
   </article>
   <article class="col-md-5 whatsnew">
     <h2>What's new in SolAR framework?</h2>
-    <p>v0.9.0 just released! (2021/01/07) </p>
+    <p>v0.9.1 (2021/08/30) </p>
+      <div class="container">
+        <ul>
+          <li> Bug fix and optimizations </li>
+        </ul>
+      </div>
+    <p>v0.9.0 (2021/01/07) </p>
       <div class="container">
         <ul>
           <li> Map overlap detection and merging </li>
