--- a/install/android/index.html
+++ b/install/android/index.html
@@ -564,7 +564,7 @@ window.cookieconsent.initialise({
 <tbody>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">SolAR Demo (Fiducial, Natural, SLAM)</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARUnityPlugin/releases/tag/0.9.0">v0.9.0 download link</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARUnityPlugin/releases/tag/0.9.1">v0.9.1 download link</a></p></td>
 </tr>
 </tbody>
 </table>
@@ -741,10 +741,10 @@ os_build should match your OS (Windows or Linux)
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://raw.githubusercontent.com/SolarFramework/SolAR/master/packagedependencies.txt">packagedependencies.txt</a></p>
+<p><a href="https://raw.githubusercontent.com/SolarFramework/SolAR/release/0.9.1/packagedependencies.txt">packagedependencies.txt</a></p>
 </li>
 <li>
-<p><a href="https://raw.githubusercontent.com/SolarFramework/SolAR/master/packagedependencies-android.txt">packagedependencies-android.txt</a></p>
+<p><a href="https://raw.githubusercontent.com/SolarFramework/SolAR/release/0.9.1/packagedependencies-android.txt">packagedependencies-android.txt</a></p>
 </li>
 </ul>
 </div>
