Update solar site

--- a/create/third_parties_packaging/index.html
+++ b/create/third_parties_packaging/index.html
@@ -677,7 +677,7 @@ On GitHub, when a new release or a new dependency is published, we respect for e
 <div class="sect2">
 <h3 id="conan"><a class="anchor" href="#conan"></a><a class="link" href="#conan">Conan</a></h3>
 <div class="paragraph">
-<p>Third party packaging can quickly become tedious, especially when source package manager such as Conan already provide you a solution to download ready-to-use packages for a large range of popular third parties hosted on public repositories (<a href="https://bintray.com/conan/conan-center">Conan center</a>, <a href="https://bintray.com/bincrafters/public-conan">Bincrafters</a>).</p>
+<p>Third party packaging can quickly become tedious, especially when source package manager such as Conan already provide you a solution to download ready-to-use packages for a large range of popular third parties hosted on public repositories (<a href="https://center.conan.io">Conan center</a>).</p>
 </div>
 <div class="paragraph">
 <p>To add your Conan package to your solution using Remaken, you can take a look at the <a href="https://github.com/b-com-software-basis/remaken">Remaken documentation</a>.</p>
