--- a/assemble/standalone_c_plus_plus/index.html
+++ b/assemble/standalone_c_plus_plus/index.html
@@ -726,7 +726,7 @@ OTHER_FILES += \
     packagedependencies.txt
 
 #NOTE : Must be placed at the end of the .pro
-include ($$shell_quote($$shell_path($${QMAKE_REMAKEN_RULES_ROOT}/remaken_install_target.pri)))) #&lt;5&gt; # Shell_quote &amp; shell_path required for visual on windows</code></pre>
+include ($$shell_quote($$shell_path($${QMAKE_REMAKEN_RULES_ROOT}/remaken_install_target.pri)))) # Shell_quote &amp; shell_path required for visual on windows <i class="conum" data-value="5"></i><b>(5)</b></code></pre>
 </div>
 </div>
 <div class="colist arabic">
