--- a/create/module/index.html
+++ b/create/module/index.html
@@ -773,7 +773,7 @@ OTHER_FILES += \
     packagedependencies-android.txt
 
 #NOTE : Must be placed at the end of the .pro
-include ($$shell_quote($$shell_path($${QMAKE_REMAKEN_RULES_ROOT}/remaken_install_target.pri))))  #&lt;5&gt; # Shell_quote &amp; shell_path required for visual on windows</pre>
+include ($$shell_quote($$shell_path($${QMAKE_REMAKEN_RULES_ROOT}/remaken_install_target.pri)))) # Shell_quote &amp; shell_path required for visual on windows <i class="conum" data-value="5"></i><b>(5)</b></pre>
 </div>
 </div>
 <div class="colist arabic">
