Update solar site

--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ window.cookieconsent.initialise({
     </p>
   </article>
   <article class="col-md-5 whatsnew">
-    <h2>What's new in SolAR framework? (<a href="https://github.com/SolarFramework/SolAR/blob/release/0.10.0/ReleaseNotes.md" target="_blank" rel="noopener noreferrer">more details about all versions</a>)</h2>
+    <h2>What's new in SolAR framework? <br /> (<a href="https://github.com/SolarFramework/SolAR/blob/release/0.10.0/ReleaseNotes.md" target="_blank" rel="noopener noreferrer">Release notes</a>)</h2>
     <p>v0.10.0 (2021/12/30) </p>
       <div class="container">
         <ul>
@@ -613,6 +613,7 @@ window.cookieconsent.initialise({
           <li> SLAM and mapping optimizations</li>
           <li> gRPC module: stubs for client and server sides, for all SolAR interfaces, to create remote services</li>
           <li> Map Update, Relocalization and Mapping services (for cloud deployment) and client test applications</li>
+          <li> Add module PopSift for CUDA optimized SIFT feature detection and extraction.</li>
         </ul>
       </div>
     <p>v0.9.1 (2021/08/30) </p>
