--- a/install/linux/index.html
+++ b/install/linux/index.html
@@ -687,7 +687,7 @@ You don&#8217;t need to install <em>Qt</em> SDK, just the <em>Qt Creator</em>. S
 <p>run <code>source ~/.profile</code> to update brew eval modification to your ${HOME}/.profile. Try <code>brew --version</code> commands in terminal to check installation</p>
 </li>
 <li>
-<p>Then, run <code>.\installRemaken.sh 1.8</code>. This will install the version 1.8 of remaken on your machine. If you want to install the latest version, just run <code>.\installRemaken.sh</code>. Recent version have not been yet validated for SolAR 0.10.0.</p>
+<p>Then, run <code>./installRemaken.sh 1.8</code>. This will install the version 1.8 of remaken on your machine. If you want to install the latest version, just run <code>./installRemaken.sh</code>. Recent version have not been yet validated for SolAR 0.10.0.</p>
 </li>
 <li>
 <p>run again <code>source ~/.profile</code> to update your ${HOME}/.profile.</p>
