Update solar site

--- a/community/GIT/index.html
+++ b/community/GIT/index.html
@@ -625,46 +625,66 @@ window.cookieconsent.initialise({
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARFramework" class="bare">https://github.com/SolarFramework/SolARFramework</a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">build_scripts</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/build-scripts" class="bare">https://github.com/SolarFramework/build-scripts</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolARPipelineManager</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARPipelineManager" class="bare">https://github.com/SolarFramework/SolARPipelineManager</a></p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolARWrapper</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARWrapper" class="bare">https://github.com/SolarFramework/SolARWrapper</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolARFrameworkGRPCRemote</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARFrameworkGRPCRemote" class="bare">https://github.com/SolarFramework/SolARFrameworkGRPCRemote</a></p></td>
 <td class="tableblock halign-left valign-top" rowspan="7"><p class="tableblock">Modules</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleOpenCV</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleOpenCV" class="bare">https://github.com/SolarFramework/SolARModuleOpenCV</a></p></td>
-</tr>
-<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleNonFreeOpenCV</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleNonFreeOpenCV" class="bare">https://github.com/SolarFramework/SolARModuleNonFreeOpenCV</a></p></td>
-</tr>
-<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleTools</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleTools" class="bare">https://github.com/SolarFramework/SolARModuleTools</a></p></td>
-</tr>
-<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleFBOW</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleFBOW" class="bare">https://github.com/SolarFramework/SolARModuleFBOW</a></p></td>
-</tr>
-<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleOpenGV</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleOpenGV" class="bare">https://github.com/SolarFramework/SolARModuleOpenGV</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleG2O</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleG2O" class="bare">https://github.com/SolarFramework/SolARModuleG2O</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleCeres</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleCeres" class="bare">https://github.com/SolarFramework/SolARModuleCeres</a></p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleCeres" class="bare">https://github.com/SolarFramework/SolARModuleCeres</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleOpenGL</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleOpenGL" class="bare">https://github.com/SolarFramework/SolARModuleOpenGL</a></p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolARModulePopSift</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModulePopSift" class="bare">https://github.com/SolarFramework/SolARModulePopSift</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolARModuleRealSense</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModuleRealSense" class="bare">https://github.com/SolarFramework/SolARModuleRealSense</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolARModulePCL</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/SolARModulePCL" class="bare">https://github.com/SolarFramework/SolARModulePCL</a></p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top" rowspan="4"><p class="tableblock">Samples</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Natural Image Marker</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/NaturalImageMarker" class="bare">https://github.com/SolarFramework/NaturalImageMarker</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/Sample-NaturalImageMarker" class="bare">https://github.com/SolarFramework/Sample-NaturalImageMarker</a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Fiducial Marker</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/FiducialMarker" class="bare">https://github.com/SolarFramework/FiducialMarker</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/Sample-FiducialMarker" class="bare">https://github.com/SolarFramework/Sample-FiducialMarker</a></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"> Sample-Slam</p></td>
@@ -673,6 +693,16 @@ window.cookieconsent.initialise({
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Sample-Triangulation</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/Sample-Triangulation" class="bare">https://github.com/SolarFramework/Sample-Triangulation</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Sample-Mapping</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/Sample-Mapping" class="bare">https://github.com/SolarFramework/Sample-Mapping</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Sample-MapUpdate</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/Sample-MapUpdate" class="bare">https://github.com/SolarFramework/Sample-MapUpdate</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Sample-Relocalization</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/SolarFramework/Sample-Relocalization" class="bare">https://github.com/SolarFramework/Sample-Relocalization</a></p></td>
 </tr>
 </tbody>
 </table>
