Update solar site

--- a/assemble/pipeline/index.html
+++ b/assemble/pipeline/index.html
@@ -426,9 +426,9 @@ window.cookieconsent.initialise({
 	
 	
 
-		<li >
-			<a href="/assemble/unity_pipeline/">
-				Unity pipeline
+		<li  class="active currentPage">
+			<a href="/assemble/pipeline/">
+				Pipeline
 				
 			</a>
 		</li>
