Update solar site

--- a/documentation/framework_architecture/index.html
+++ b/documentation/framework_architecture/index.html
@@ -1616,7 +1616,7 @@ m_dropBufferPoseForDisplay.tryPop(resultFromDetection);</code></pre>
 <p>The Simplified Wrapper and Interface Generator (SWIG) is an open-source software tool used to connect computer programs or libraries written in C or C++ with scripting languages such as Lua, Perl, PHP, Python, R, Ruby, Tcl, and other languages like C#, Java, JavaScript, Go, D, OCaml, Octave, Scilab and Scheme. Output can also be in the form of XML.</p>
 </div>
 <div class="paragraph">
-<p>The export of SolAR pipelines to Unity is described here: <a href="http://www.solarframework.org/assemble/unity_pipeline/#export_your_pipeline_for_unity" class="bare">http://www.solarframework.org/assemble/unity_pipeline/#export_your_pipeline_for_unity</a></p>
+<p>The export of SolAR pipelines to Unity is described here: <a href="http://www.solarframework.org/assemble/pipeline/#export_your_pipeline_for_unity" class="bare">http://www.solarframework.org/assemble/pipeline/#export_your_pipeline_for_unity</a></p>
 </div>
 <div class="paragraph">
 <p>The SolAR Wrapper project is available on the SolAR Git Hub repository: <a href="https://github.com/SolarFramework/SwigWrapper" class="bare">https://github.com/SolarFramework/SwigWrapper</a></p>
@@ -2113,7 +2113,7 @@ Cflags: -I${includedir}</code></pre>
 <p>The steps to use pipelines for Unity are described on SolAR web site: <a href="http://www.solarframework.org/use/unity/" class="bare">http://www.solarframework.org/use/unity/</a></p>
 </div>
 <div class="paragraph">
-<p>The steps to assemble pipelines for Unity are described on SolAR web site: <a href="http://www.solarframework.org/assemble/unity_pipeline/" class="bare">http://www.solarframework.org/assemble/unity_pipeline/</a></p>
+<p>The steps to assemble pipelines for Unity are described on SolAR web site: <a href="http://www.solarframework.org/assemble/pipeline/" class="bare">http://www.solarframework.org/assemble/pipeline/</a></p>
 </div>
 </div>
 </div>
